@@ -90,6 +90,7 @@
                 <param name="smalllandscapecondition" value="Skin.String(NextAired.View,Default)" />
                 <param name="landscapecondition" value="Skin.String(NextAired.View,Landscape)" />
                 <param name="iconcondition" value="false" />
+                <param name="bannercondition" value="false" />
                 <onback>301</onback>
                 <movement>6</movement>
                 <animation effect="fade" start="100" end="0" condition="!Integer.IsGreater(Container($PARAM[id]).NumItems,0) | Container($PARAM[id]).IsUpdating">Conditional</animation>
@@ -105,6 +106,7 @@
         <param name="smalllandscapecondition" default="false" />
         <param name="landscapecondition" default="false" />
         <param name="iconcondition" default="false" />
+        <param name="bannercondition" default="false" />
         <definition>
             <include content="View_Cast_Toplabel">
                 <param name="groupid" value="$PARAM[groupid]" />
@@ -131,6 +133,7 @@
                 <param name="smalllandscapecondition" value="$PARAM[smalllandscapecondition]" />
                 <param name="landscapecondition" value="$PARAM[landscapecondition]" />
                 <param name="iconcondition" value="$PARAM[iconcondition]" />
+                <param name="bannercondition" value="$PARAM[iconcondition]" />
                 <onback>301</onback>
                 <movement>6</movement>
                 <animation effect="fade" start="100" end="0" condition="!Integer.IsGreater(Container($PARAM[id]).NumItems,0) | Container($PARAM[id]).IsUpdating">Conditional</animation>
@@ -266,6 +269,7 @@
         <param name="landscapecondition" default="[!String.IsEmpty(Container(302).ListItem.Property(widgetPath)) + String.IsEqual(Container(302).ListItem.Property(widgetAspect),Landscape)] | [String.IsEmpty(Container(302).ListItem.Property(widgetPath)) + String.IsEqual(Container(301).ListItem.Property(widgetAspect),Landscape)]" />
         <param name="smalllandscapecondition" default="false" />
         <param name="smallsquarecondition" default="false" />
+        <param name="bannercondition" default="false" />
         <param name="height" default="item_row_height" />
         <param name="includecontent" default="true" />
         <param name="top" default="442.5" />
@@ -393,7 +397,40 @@
                     </include>
                 </focusedlayout>
 
-                <itemlayout width="item_poster_width" height="item_row_height" condition="![$PARAM[squarecondition] | $PARAM[iconcondition] | $PARAM[landscapecondition]]">
+                <itemlayout width="1800" height="item_row_height" condition="$PARAM[bannercondition]">
+                    <include content="View_51_Wall_Itemlayout">
+                        <param name="selectbox" value="false" />
+                        <param name="icon" value="$VAR[Image_Banner]" />
+                        <param name="id" value="$PARAM[id]" />
+                        <param name="labelinclude" value="Defs_Null" />
+                        <param name="diffuse" value="diffuse/banner-widget.png" />
+                    </include>
+                    <control type="image">
+                        <aspectratio align="left">keep</aspectratio>
+                        <bordersize>90</bordersize>
+                        <height>350</height>
+                        <texture background="true">$VAR[Image_ClearLogo]</texture>
+                        <visible>String.IsEmpty(ListItem.Art(banner)) + String.IsEmpty(ListItem.Art(tvshow.banner))</visible>
+                    </control>
+                </itemlayout>
+                <focusedlayout width="1800" height="item_row_height" condition="$PARAM[bannercondition]">
+                    <include content="View_51_Wall_Itemlayout">
+                        <param name="selectbox" value="true" />
+                        <param name="icon" value="$VAR[Image_Banner]" />
+                        <param name="id" value="$PARAM[id]" />
+                        <param name="labelinclude" value="Defs_Null" />
+                        <param name="diffuse" value="diffuse/banner-widget.png" />
+                    </include>
+                    <control type="image">
+                        <aspectratio align="left">keep</aspectratio>
+                        <bordersize>90</bordersize>
+                        <height>350</height>
+                        <texture background="true">$VAR[Image_ClearLogo]</texture>
+                        <visible>String.IsEmpty(ListItem.Art(banner)) + String.IsEmpty(ListItem.Art(tvshow.banner))</visible>
+                    </control>
+                </focusedlayout>
+
+                <itemlayout width="item_poster_width" height="item_row_height" condition="![$PARAM[squarecondition] | $PARAM[iconcondition] | $PARAM[landscapecondition] | $PARAM[smalllandscapecondition] | $PARAM[smallsquarecondition] | $PARAM[bannercondition]]">
                     <include content="View_51_Wall_Itemlayout">
                         <param name="selectbox" value="false" />
                         <param name="icon" value="$VAR[Image_Poster]" />
@@ -401,7 +438,7 @@
                         <param name="labelinclude" value="$PARAM[labelinclude]" />
                     </include>
                 </itemlayout>
-                <focusedlayout width="item_poster_width" height="item_row_height" condition="![$PARAM[squarecondition] | $PARAM[iconcondition] | $PARAM[landscapecondition]]">
+                <focusedlayout width="item_poster_width" height="item_row_height" condition="![$PARAM[squarecondition] | $PARAM[iconcondition] | $PARAM[landscapecondition] | $PARAM[smalllandscapecondition] | $PARAM[smallsquarecondition] | $PARAM[bannercondition]]">
                     <include content="View_51_Wall_Itemlayout">
                         <param name="selectbox" value="true" />
                         <param name="icon" value="$VAR[Image_Poster]" />
