@@ -45,6 +45,7 @@
     <property property="widgetAspect">Poster</property>
     <property property="widgetAspect">Square</property>
     <property property="widgetAspect">Landscape</property>
+    <property property="widgetAspect">Banner</property>
     <property property="widgetAspect">Small Square</property>
     <property property="widgetAspect">Small Landscape</property>
     <propertySettings property="widgetAspect" buttonID="9901" title="Widget Aspect Ratio" />
