@@ -5,6 +5,7 @@
 - Fix for too long studio/language tags
 - Fix for too long filepath
 - Fixed movement option for widgets
+- Add banner widget type
 
 0.9.50
 - Fix for small landscape and small square widget text
